--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -37,7 +37,10 @@
                 </DockPanel>
                 <DockPanel>
                     <TextBlock Text="УК:" Margin="3" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding CallFromServiceCompany}" Margin="3" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding CallFromServiceCompany.Name}" Margin="3" FontWeight="Bold"/>
+                    <Button HorizontalAlignment="Right" Background="Transparent" BorderThickness="0" Command="{Binding ServiceCompanyInfoCommand}">
+                        <Image Source="pack://application:,,,/Images/info_24.png" Height="24" />
+                    </Button>
                 </DockPanel>
 
                 <DockPanel HorizontalAlignment ="Center">
@@ -77,7 +80,12 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <TextBlock Grid.Row="2" Margin ="5" FontWeight="Bold" TextAlignment="Center" Text="Непринятые звонки:"/>
+            <DockPanel Grid.Row="2" Margin="3">
+            <TextBlock  Margin ="3" FontWeight="Bold" TextAlignment="Center" Text="Непринятые звонки:"/>
+                <Button HorizontalAlignment="Center" Background="Transparent" BorderThickness="0" ToolTip="Удаление пропущенных звонков исключая звонки за сегодня!" Command="{Binding DeleteNotAnsweredCommand}">
+                    <Image Source="pack://application:,,,/Images/delete-24.png" Stretch="UniformToFill" Height="24"/>
+                </Button>
+            </DockPanel>
             <ListBox Grid.Row="3" Name ="notAnsweredListBox" 
                      ItemsSource="{Binding Path=NotAnsweredCalls}" 
                      SelectedItem ="{Binding Path=SelectedCall}"
