--- a/CRMPhone/Dialogs/MeterDeviceDialog.xaml
+++ b/CRMPhone/Dialogs/MeterDeviceDialog.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CRMPhone.Dialogs"
         xmlns:crmPhone="clr-namespace:CRMPhone"
         mc:Ignorable="d"
-        Title="Заявка" MinHeight="300" MinWidth ="700" Height="300" Width="700"
+        Title="Показания приборов учёта" MinHeight="300" MinWidth ="700" Height="300" Width="700"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         FontSize="12"
