[~] - Контроль аварийных заявок

--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -114,6 +114,15 @@
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
+                        <Image  Source="pack://application:,,,/Images/danger_small.png" Stretch="UniformToFill" Height="28" />
+                        <TextBlock Margin="3" Text="Контроль аварийных"/>
+                    </StackPanel>
+                </TabItem.Header>
+                <controls:AlertRequestControl DataContext="{Binding AlertRequestDataContext}"/>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
                         <Image  Source="pack://application:,,,/Images/prib_ucheta_small.png" Stretch="UniformToFill" Height="28" />
                         <TextBlock Margin="3" Text="Приборы учёта"/>
                     </StackPanel>
